@@ -102,6 +102,9 @@
 # desktop entry spec to allow this
 0:32   string          [Desktop\ Entry]                        application/x-gnome-app-info
 
+# Theme ("Metatheme") support
+0:40   string          [X-GNOME-Metatheme]                     application/x-gnome-theme
+
 # special Nautilus link type
 0:32	string		\<nautilus_object\ nautilus_link	application/x-nautilus-link
 
